<resources>
    <string name="app_name">MedicaLexicon</string>
    <string name="Preparation">Preparing for first launch</string>
    <string name="not_have_free_space">Not enough space</string>
    <string name="message_100mb">The program requires an additional 100 MB of free space. Please free up some space and restart the program.</string>
    <string name="close_app">Close the program</string>
    <string name="WaitLoad">loading…</string>
    <string name="action_item_menu_about">About..</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_item_menu_settings">Settings</string>
    <string name="action_search">Search the entire directory</string>
    <string name="action_settings">Settings</string>
    <string name="Favorites">Bookmark</string>
    <string name="deletefavorite">Bookmark removed</string>
    <string name="addfavorite">Bookmark added</string>
    <string name="share_item_title">Share</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="riskfactors">RISK FACTORS</string>
    <string name="causes">CAUSES</string>
    <string name="definition">DEFINITION</string>
    <string name="Complications">COMPLICATIONS</string>
    <string name="preparingappointment">PREPARING FOR YOUR APPOINTMENT</string>
    <string name="testsdiagnosis">TESTS AND DIAGNOSIS</string>
    <string name="treatment">TREATMENTS AND DRUGS</string>
    <string name="lifestyleremedies">LIFESTYLE AND HOME REMEDIES</string>
    <string name="notices_for_files">Notices for files:</string>
    <string name="picasso">Picasso</string>
    <string name="Apache2">Copyright 2013 UNCOPT LLC. Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="licenseText">Open source licenses</string>
    <string name="search_hint">Start Typing…</string>
    <string name="title_organization_detail">Information</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="About">About…</string>
    <string name="Publisher">Publisher: Rohit Goyal</string>
    <string name="our_apps">Other Applications</string>
    <string name="appWithoutPaid">Application without advertising</string>
    <string name="textDialogGooglePlay">Version without advertising can download in google play:</string>
    <string name="FunText1">Thank you for choosing the program.</string>
    <string name="FunText2">Have a nice day and good mood.</string>
    <string name="Ok">Ok</string>
    <string name="devPlay">irohitgoyal</string>
    <string name="settings_description">Definitions of Medical words</string>
    <string name="adbMobUnitId">ca-app-pub-6147437011331287/7569749055</string>
    <string name="adbMobFullScreenUnitId">ca-app-pub-6147437011331287/2522270655</string>
</resources>
