<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/license_notice_title" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notices_for_files" />
            <TextView android:textSize="@dimen/license_notice_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/picasso" />
        </LinearLayout>
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/license_notice_text" android:autoLink="all" android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Apache2" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>