<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="60.0dip">
        <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menu_info_details" />
        <TextView android:textSize="20.0sp" android:textColor="#ff00c4ff" android:layout_gravity="center_vertical" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/About" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="#ff00c4ff" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/ic_launcher" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/textVers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="35.0dip" android:text="vers" />
    <LinearLayout android:layout_gravity="center_horizontal" android:id="@id/layoutViewFio" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff000000" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/Publisher" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff00c4ff" android:layout_gravity="center" android:id="@id/textOtherApp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/our_apps" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <!--<TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:text="@string/textDialogGooglePlay" />-->
        <!--<TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff00c4ff" android:layout_gravity="center" android:id="@id/textViewFullHref" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/appWithoutPaid" />-->
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:id="@id/textView33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/FunText1" />
        <!--<TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="13.0sp" android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:id="@id/textView333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/FunText2" />-->
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="#ffa39ca4" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <Button android:id="@id/btnYes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Ok" style="@style/Widget.AppCompat.Light.Base.ActionButton" />
    </LinearLayout>
</LinearLayout>